syntax = "proto3";

package tag;

option go_package = "github.com/MingPV/EventService/proto/tagpb";

message Tag {
	uint32 id = 1;
	string tag_name = 2;
	string created_at = 3;
	string updated_at = 4;
}

message CreateTagRequest {
	string tag_name = 1;
}

message CreateTagResponse {
  Tag tag = 1;
}

message FindTagByIDRequest {
  uint32 id = 1;
}

message FindTagByIDResponse {
  Tag tag = 1;
}

message FindAllTagsRequest {}

message FindAllTagsResponse {
  repeated Tag tags = 1;
}

message PatchTagRequest {
	uint32 id = 1;
  string tag_name = 2;
}

message PatchTagResponse {
  Tag tag = 1;
}

message DeleteTagRequest {
  uint32 id = 1;
}

message DeleteTagResponse {
  string message = 1;
}

service TagService {
  rpc CreateTag(CreateTagRequest) returns (CreateTagResponse);
  rpc FindTagByID(FindTagByIDRequest) returns (FindTagByIDResponse);
  rpc FindAllTags(FindAllTagsRequest) returns (FindAllTagsResponse);
  rpc PatchTag(PatchTagRequest) returns (PatchTagResponse);
  rpc DeleteTag(DeleteTagRequest) returns (DeleteTagResponse);
}
